Fix a sometimes-crash with the KPackageJob task

This ensures that we're not trying to reference a job that is no longer
around (and also owned by a separate thread and handled by a separate
event loop, meaning it may very well have been deleted by the time it
reaches that old codepath).

BUG:425245